--- a/basics/index.html
+++ b/basics/index.html
@@ -23,5 +23,85 @@
         <!-- "./" takes you out of the file
          and
          "../" takes you out of the folder -->
+         <h3> ordered list</h3>
+         <ol type="I">
+            <li> raid</li>
+            <li> bhool chook maaf</li>
+            <li> housefull 5</li>
+            <li> final destination</li>
+         </ol>
+            <h3> unordered list</h3>
+            <ul>
+            <li> raid</li>
+            <li> bhool chook maaf</li>
+            <li> housefull 5</li>
+            <li> final destination</li>
+         </ul>
+         <br>
+         <h3> sublist</h3>
+          <ol type="I">
+            <li> raid</li>
+            <li> bhool chook maaf</li>
+            <li> housefull 5</li>
+            <li> final destination
+                <ol type="i">
+                    <li> final destination 1</li>
+                    <li> final destination 2</li>
+                    <li> final destination 3</li>
+                </ol>
+            </li>
+         </ol>
+         <h3> table</h3>
+         <table border="3" cellpadding="10" cellspacing="10">
+            <!-- <tr > <th align="center">TIME TABLE</th></tr> -->
+            <tr>
+                <th> DAYS</th>
+                <th> 10 AM</th>
+                <th> 11 AM</th>
+                <th> 12 NOON</th>
+                <th> 1 PM</th>
+                <th> 2 PM</th>
+            </tr>
+            <tr>
+                <td> MONDAY</td>
+                <td> HTML</td>
+                <TD> CSS</TD>
+                <td> JS</td>
+                <td> M-III</td>
+                <tD> SE</tD>
+            </tr>
+             <tr>
+                <td> TUESDAY</td>
+                <td> HTML</td>
+                <TD> CSS</TD>
+                <td> JS</td>
+                <td> COA</td>
+                <tD> OS</tD>
+            </tr>
+            <tr>
+                <td> WEDNESDAY</td>
+                <td> HTML</td>
+                <TD> CSS</TD>
+                <td> JS</td>
+                <td> OS</td>
+                <tD> OS</tD>
+            </tr>
+            <tr>
+                <td> THURSDAY</td>
+                <td> HTML</td>
+                <TD> CSS</TD>
+                <td> JS</td>
+                <td> M-III</td>
+                <tD> M-III</tD>
+            </tr>
+            <tr>
+                <td> FRIDAY</td>
+                <td> HTML</td>
+                <TD> CSS</TD>
+                <td> JS</td>
+                <td> COA</td>
+                <tD> SE</tD>
+            </tr>
+         </table>
     </body>
 </html>
