--- a/basics/index.html
+++ b/basics/index.html
@@ -61,6 +61,7 @@
                 <th> 12 NOON</th>
                 <th> 1 PM</th>
                 <th> 2 PM</th>
+                <th> 3 PM</th>
             </tr>
             <tr>
                 <td> MONDAY</td>
@@ -69,6 +70,7 @@
                 <td> JS</td>
                 <td> M-III</td>
                 <tD> SE</tD>
+                <td> SE</td>
             </tr>
              <tr>
                 <td> TUESDAY</td>
@@ -77,6 +79,7 @@
                 <td> JS</td>
                 <td> COA</td>
                 <tD> OS</tD>
+                <td>COA</td>
             </tr>
             <tr>
                 <td> WEDNESDAY</td>
