--- a/basics/index.html
+++ b/basics/index.html
@@ -22,7 +22,7 @@
         <a href="/folder2\f2.html">hello2</a>
         <!-- "./" takes you out of the file
          and
-         "../" takes you out of the folder -->
+         "../" takes you out of the folder --><br><hr>
          <h3> ordered list</h3>
          <ol type="I">
             <li> raid</li>
@@ -37,7 +37,7 @@
             <li> housefull 5</li>
             <li> final destination</li>
          </ul>
-         <br>
+         <br><hr>
          <h3> sublist</h3>
           <ol type="I">
             <li> raid</li>
@@ -51,6 +51,7 @@
                 </ol>
             </li>
          </ol>
+         <hr>
          <h3> table</h3>
          <table border="3" cellpadding="10" cellspacing="10">
             <!-- <tr > <th align="center">TIME TABLE</th></tr> -->
@@ -106,5 +107,18 @@
                 <tD> SE</tD>
             </tr>
          </table>
+         <br> <hr>
+         <h3>MEDIA</h3>
+         <img  height="250px" src="https://images.unsplash.com/photo-1569926426424-ed3be842deea?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MjB8MTgxNjg4Mjd8fGVufDB8fHx8fA%3D%3D">
+         <img height="250px" src="https://images.unsplash.com/photo-1601063448286-86119505cc9c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8OHwxODE2ODgyN3x8ZW58MHx8fHx8">
+         <img height="250px" src="https://images.unsplash.com/photo-1609959877958-27b4093764e3?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3wxODE2ODgyN3x8ZW58MHx8fHx8">
+         <img height="250px" src="https://images.unsplash.com/photo-1597925554642-76e217782e3e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTB8MTgxNjg4Mjd8fGVufDB8fHx8fA%3D%3D">
+         <br><video width="680px"src="https://videocdn.cdnpk.net/videos/941d9098-40b8-4760-88f4-f265ecc1249e/horizontal/previews/clear/small.mp4?token=exp=1750060742~hmac=b368552b9f56b8c3f71f0e3ea74fdd4c4acb9ff3fa0c3e5bb82d444d499bf0ce" controls></video>
+         <video src=""></video>
+         <!-- attributes used in video tag are loop, autoplay, muted -->
+          <br>
+         <audio src="" controls></audio>
+         <hr>
+         <iframe  height="400px" width="10000px" src="https://flipkart.com"></iframe>
     </body>
 </html>
